--- a/style.css
+++ b/style.css
@@ -297,5 +297,32 @@ button:hover {
   background-color: #CD0404;
 }
 
+/* ......................footer section style............................. */
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 4em 0;
+  text-align: center;
+}
+.footer-mark{
+  font-weight: 700;
+  color: #CD0404;
+}
+footer nav{
+  margin-top: 1rem;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  margin: 0 1em;
+}
+
+footer a:hover {
+  color: #ccc;
+}
+
+
 
 
